--- a/home.html
+++ b/home.html
@@ -11,7 +11,10 @@
 
   <!-- HEADER / NAVBAR -->
   <header class="navbar">
-    <div class="logo">🏨 Jayvee Hall of Mansion</div>
+    <div class="logo-container">
+      <img src="assets/logo.jpg" alt="Jayvee Hall Logo" class="logo-img">
+      <span class="logo-text">Jayvee Hall of Mansion</span>
+    </div>
     <nav>
       <ul class="nav-links">
         <li><a href="home.html" class="active">Home</a></li>
