--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
   <!-- HEADER / NAVBAR -->
   <header class="navbar">
     <div class="logo-container">
-      <img src="assets/logo.jpg" alt="Jayvee Hall Logo" class="logo-img">
+      <img src="assets/logo/.jpg" alt="Jayvee Hall Logo" class="logo-img">
       <span class="logo-text">Jayvee Hall of Mansion</span>
     </div>
     <nav>
