--- a/booking.html
+++ b/booking.html
@@ -1,41 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Booking - Jayvee Hall</title>
-<link rel="stylesheet" href="style.css">
-<script defer src="script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Booking - Jayvee Hall of Mansion</title>
+  <link rel="stylesheet" href="style.css">
+  <script defer src="script.js"></script>
 </head>
 <body>
-<div class="form-container fade-in">
-  <h2>Online Reservation</h2>
-  <form id="bookingForm">
-    <input type="text" name="name" placeholder="Your Name" required>
-    <input type="number" name="people" placeholder="Number of People" required>
-    <input type="date" name="date" required>
-    <input type="number" name="days" placeholder="Number of Days" required>
-    <select name="payment" id="paymentMethod" required>
-      <option value="">Select Payment Method</option>
-      <option>Cash on Arrival</option>
-      <option>Online Payment</option>
-    </select>
-    <div id="bankList" style="display:none;">
-      <select name="bank">
-        <option>BDO</option>
-        <option>Landbank</option>
-        <option>UnionBank</option>
+  <!-- HEADER -->
+  
+
+  <!-- BOOKING FORM -->
+  <div class="form-container fade-in">
+    <h2>Online Reservation Form</h2>
+    <form id="bookingForm">
+      <input type="text" name="fullName" placeholder="Enter Full Name" required>
+      <input type="number" name="numPeople" placeholder="Number of People" required>
+      
+      <label>Select Date of Stay:</label>
+      <input type="date" name="stayDate" required>
+
+      <input type="number" name="numDays" placeholder="Number of Days to Stay" required>
+
+      <!-- Payment Method -->
+      <label for="paymentMethod">Payment Method:</label>
+      <select id="paymentMethod" name="paymentMethod" onchange="showPaymentOptions()" required>
+        <option value="">-- Select Payment Method --</option>
+        <option value="cash">Cash on Arrival</option>
+        <option value="online">Online Payment</option>
       </select>
-      <p>[Face Scan Verification Simulated]</p>
-    </div>
-    <button type="submit">Confirm Booking</button>
-  </form>
-</div>
-<script>
-document.getElementById('paymentMethod').addEventListener('change',function(){
-  document.getElementById('bankList').style.display = this.value==="Online Payment"?"block":"none";
-});
-handleBooking('bookingForm');
-</script>
+
+      <!-- Online Payment Options -->
+      <div id="onlinePayment" class="hidden">
+        <label for="bank">Select Bank:</label>
+        <select id="bank" name="bank">
+          <option value="">-- Select Bank --</option>
+          <option value="BDO">BDO</option>
+          <option value="Landbank">Landbank</option>
+          <option value="BPI">BPI</option>
+          <option value="Metrobank">Metrobank</option>
+        </select>
+
+        <!-- Face Scan -->
+        <div class="face-scan">
+          <p>Please scan your face for verification:</p>
+          <div class="face-box">📷 Face Scan</div>
+        </div>
+      </div>
+
+      <!-- OTP Confirmation -->
+      <label for="otp">Enter OTP (sent to your phone):</label>
+      <input type="text" id="otp" name="otp" placeholder="123456" maxlength="6" required>
+
+      <button type="submit">Confirm Booking</button>
+    </form>
+  </div>
+
+  <!-- SCRIPT -->
+  <script>
+    function showPaymentOptions() {
+      const paymentMethod = document.getElementById('paymentMethod').value;
+      const onlineDiv = document.getElementById('onlinePayment');
+      onlineDiv.classList.toggle('hidden', paymentMethod !== 'online');
+    }
+
+    document.getElementById('bookingForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      // OTP Validation Simulation
+      const otp = document.getElementById('otp').value;
+      if (otp.length !== 6) {
+        alert("Invalid OTP. Please enter 6 digits.");
+        return;
+      }
+
+      alert("Booking Confirmed! Redirecting to confirmation page...");
+      window.location.href = 'confirmation.html';
+    });
+  </script>
+
 </body>
-                                             </html>
+        </html>
