--- a/admin.html
+++ b/admin.html
@@ -142,3 +142,173 @@
   </div>
 </body>
   </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Admin Panel - Jayvee Hall of Mansion</title>
+  <link rel="stylesheet" href="style.css">
+
+  <!-- jsPDF for PDF export -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f0f2f5;
+      padding: 20px;
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    .admin-container {
+      max-width: 1000px;
+      margin: 0 auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+    .actions-bar {
+      text-align: right;
+      margin-bottom: 15px;
+    }
+    .export-btn {
+      background: #28a745;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .export-btn:hover {
+      background: #218838;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    th, td {
+      padding: 12px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+      font-size: 14px;
+    }
+    th {
+      background: #007bff;
+      color: white;
+    }
+    tr:nth-child(even) {
+      background-color: #f9f9f9;
+    }
+    .actions button {
+      margin-right: 5px;
+      padding: 5px 10px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 13px;
+    }
+    .delete-btn {
+      background: #dc3545;
+      color: white;
+    }
+    .delete-btn:hover {
+      background: #b02a37;
+    }
+  </style>
+</head>
+<body>
+  <div class="admin-container">
+    <h2>Admin Panel - Jayvee Hall of Mansion</h2>
+    <p style="text-align:center;">All booking information from the Online Reservation system is shown below.</p>
+
+    <div class="actions-bar">
+      <button class="export-btn" onclick="exportToPDF()">Export to PDF</button>
+    </div>
+
+    <table id="bookingTable">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>People</th>
+          <th>Date of Stay</th>
+          <th>Days</th>
+          <th>Payment Method</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <script>
+    const tableBody = document.querySelector("#bookingTable tbody");
+    let bookings = JSON.parse(localStorage.getItem("bookings")) || [];
+
+    function renderBookings() {
+      tableBody.innerHTML = "";
+      if (bookings.length === 0) {
+        tableBody.innerHTML = `<tr><td colspan="6" style="text-align:center;">No bookings yet</td></tr>`;
+        return;
+      }
+
+      bookings.forEach((b, index) => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td>${b.name}</td>
+          <td>${b.people}</td>
+          <td>${b.date}</td>
+          <td>${b.days}</td>
+          <td>${b.payment}</td>
+          <td class="actions">
+            <button class="delete-btn" onclick="deleteBooking(${index})">Delete</button>
+          </td>
+        `;
+        tableBody.appendChild(row);
+      });
+    }
+
+    function deleteBooking(index) {
+      if (confirm("Are you sure you want to delete this booking?")) {
+        bookings.splice(index, 1);
+        localStorage.setItem("bookings", JSON.stringify(bookings));
+        renderBookings();
+      }
+    }
+
+    async function exportToPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF({ orientation: "landscape" });
+
+      doc.setFontSize(18);
+      doc.text("Jayvee Hall of Mansion - Booking Records", 14, 20);
+      doc.setFontSize(12);
+
+      if (bookings.length === 0) {
+        doc.text("No bookings available.", 14, 40);
+      } else {
+        let y = 40;
+        bookings.forEach((b, index) => {
+          const info = `${index + 1}. ${b.name} | People: ${b.people} | Date: ${b.date} | Days: ${b.days} | Payment: ${b.payment}`;
+          doc.text(info, 14, y);
+          y += 10;
+          if (y > 180) {
+            doc.addPage();
+            y = 20;
+          }
+        });
+      }
+
+      doc.save("Booking_Records.pdf");
+    }
+
+    // Initial render
+    renderBookings();
+  </script>
+</body>
+  </html>
